    -- LP: #340503
       [Show item properties on double-click]
    -- LP: #353819
       [check window border option when calculating shape]
    -- LP: #353824
       [fix advanced selection tool when using compiz]
    -- LP: #353830
       [do not capture the zoom window when using the simple selection]
    -- LP: #363708
       [lines of selected area get captured sometimes]
    -- LP: #365365
       [polaroid plugin text doesn't allow apostrophes]
    -- LP: #366695
       [control advanced selection tool with arrow keys]
    -- LP: #367513
       [desktop entry contains deprecated encoding key]
  * Drawing Tool
    -- LP: #310704
       [object property changes don't take immediate effect]
    -- LP: #311578
       [resize canvas]
    -- LP: #318452
       [save and restore last used tool]
    -- LP: #338809
       [keep tool focus after one usage]
    -- LP: #360254
       [added highlighter/marker]
    -- LP: #364815
       [added arrow shape]
  * Plugins
    -- LP: #264622
       [new watermark plugin]
  * updated translations

 -- Mario Kemper <mario.kemper@googlemail.com>  Sun, 26 Apr 2009 23:24:28 +0200

shutter (0.70.2~ppa4) jaunty; urgency=low

  * fixed bugs
    -- LP: #339139
       [Shutter selects incorrect target window]
    -- LP: #340855 + LP: #340864
       [fixed save-as function]	
    -- LP: #340856
       [main window is partly visible on screenshots]
    -- LP: #340990
       [Shutter crashes when xserver grab fails]
    -- LP: #341459
       [Ctrl+ + doesn't zoom in drawing area]
    -- LP: #347821
       [decode filesize properly]
  * updated translations

 -- Mario Kemper <mario.kemper@googlemail.com>  Tue, 24 Mar 2009 21:41:37 +0100

shutter (0.70.1~ppa2) jaunty; urgency=low

  * fixed bugs
    -- LP: #260771
       [Detect 'window-manager-changed' event]	
    -- LP: #328654
       [Weird paths after uploading]
    -- LP: #338829
       [Uploading to imageshack is broken]
    -- LP: #338990